fix(ui): home post alignment
Add `align-content: start` to vertically align the content of each post, this prevents inconsistent layout

--- a/src/pages/HomePage/partials/Posts.module.css
+++ b/src/pages/HomePage/partials/Posts.module.css
@@ -7,6 +7,7 @@
 .post {
   text-decoration: none;
   display: grid;
+  align-content: start;
   gap: 1em;
 
   padding: 1em;
